Source/WebCore/rendering/shapes/ShapeInfo.h
@@ -71,34 +71,7 @@ class ShapeInfo {
 public:
     virtual ~ShapeInfo() { }
 
-    void setReferenceBoxLogicalSize(LayoutSize newReferenceBoxLogicalSize)
-    {
-        LayoutBox box = referenceBox();
-        switch (box) {
-        case MarginBox:
-            newReferenceBoxLogicalSize.expand(m_renderer.marginLogicalWidth(), m_renderer.marginLogicalHeight());
-            break;
-        case BorderBox:
-            break;
-        case PaddingBox:
-            newReferenceBoxLogicalSize.shrink(m_renderer.borderLogicalWidth(), m_renderer.borderLogicalHeight());
-            break;
-        case ContentBox:
-            newReferenceBoxLogicalSize.shrink(m_renderer.borderAndPaddingLogicalWidth(), m_renderer.borderAndPaddingLogicalHeight());
-            break;
-        case Fill:
-        case Stroke:
-        case ViewBox:
-        case BoxMissing:
-            ASSERT_NOT_REACHED();
-            break;
-        }
-
-        if (m_referenceBoxLogicalSize == newReferenceBoxLogicalSize)
-            return;
-        markShapeAsDirty();
-        m_referenceBoxLogicalSize = newReferenceBoxLogicalSize;
-    }
+    void setReferenceBoxLogicalSize(LayoutSize);
 
     SegmentList computeSegmentsForLine(LayoutUnit lineTop, LayoutUnit lineHeight) const;
 
@@ -164,43 +137,10 @@ protected:
     virtual ShapeValue* shapeValue() const = 0;
     virtual void getIntervals(LayoutUnit, LayoutUnit, SegmentList&) const = 0;
 
-    virtual WritingMode writingMode() const { return m_renderer.style().writingMode(); }
+    virtual const RenderStyle& styleForWritingMode() const = 0;
 
-    LayoutUnit logicalTopOffset() const
-    {
-        LayoutBox box = referenceBox();
-        switch (box) {
-        case MarginBox: return -m_renderer.marginBefore();
-        case BorderBox: return LayoutUnit();
-        case PaddingBox: return m_renderer.borderBefore();
-        case ContentBox: return m_renderer.borderAndPaddingBefore();
-        case Fill: break;
-        case Stroke: break;
-        case ViewBox: break;
-        case BoxMissing: break;
-        }
-        ASSERT_NOT_REACHED();
-        return LayoutUnit();
-    }
-
-    LayoutUnit logicalLeftOffset() const
-    {
-        if (m_renderer.isRenderRegion())
-            return LayoutUnit();
-        LayoutBox box = referenceBox();
-        switch (box) {
-        case MarginBox: return -m_renderer.marginStart();
-        case BorderBox: return LayoutUnit();
-        case PaddingBox: return m_renderer.borderStart();
-        case ContentBox: return m_renderer.borderAndPaddingStart();
-        case Fill: break;
-        case Stroke: break;
-        case ViewBox: break;
-        case BoxMissing: break;
-        }
-        ASSERT_NOT_REACHED();
-        return LayoutUnit();
-    }
+    LayoutUnit logicalTopOffset() const;
+    LayoutUnit logicalLeftOffset() const;
 
     LayoutUnit m_referenceBoxLineTop;
     LayoutUnit m_lineHeight;
